--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "max_distance": 10,
   "max_next_events": 5,
-  "timeout_in_sec": 10,
+  "timeout_in_sec": 3600,
 
   "logging": {
     "format": "%(asctime)s | %(name)s | %(message)s",
@@ -9,8 +9,8 @@
   },
 
   "messages": {
-    "start": "Чтобы начать маршрут, пришлите свою геолокацию",
-    "stop": "Обнимаю, бот",
+    "start": "Чтобы начать, пришлите свое местоположение",
+    "stop": "Вы закончили, чтобы начать снова, пришлите свое местоположение",
     "not_found": "Не найдено ни одного места в радиусе",
     "next_not_found": [
       "Больше ничего не найдено в радиусе",
@@ -21,9 +21,10 @@
       "Выполняя небольшие задания, вы внезапно открываете для себя город с неожиданной стороны.\n\n",
       "/start - начать маршрут\n",
       "/stop - закончить маршрут\n\n",
-      "next - показать следующее задание\n",
-      "answer - показать ответ к текущему заданию\n",
-      "history - показать историческую справку (если доступно)\n\n"],
+      "<send current location> - послать местоположение\n",
+      "<next> - показать следующее задание\n",
+      "<answer> - показать ответ к текущему заданию\n",
+      "<history> - показать историческую справку (доступно не для всех мест)\n\n"],
     "unknown": "Некорректный запрос",
     "answer_not_found": "Ответ не найден"
   }
