--- a/config.json
+++ b/config.json
@@ -14,17 +14,20 @@
     "not_found": "Не найдено ни одного места в радиусе",
     "next_not_found": [
       "Больше ничего не найдено в радиусе",
-      "Пришлите новую геолокацию"],
-    "max_next_events": "Пришлите новую геолокацию",
+      "Пришлите новое местоположение"],
+    "max_next_events": "Пришлите новое местоположение",
     "help": [
       "Интерактивный поиск городских артефактов на основе базы данных маршрутов \"Бегущий Город\".\n\n",
       "Выполняя небольшие задания, вы внезапно открываете для себя город с неожиданной стороны.\n\n",
       "/start - начать маршрут\n",
       "/stop - закончить маршрут\n\n",
-      "<send current location> - послать местоположение\n",
-      "<next> - показать следующее задание\n",
-      "<answer> - показать ответ к текущему заданию\n",
-      "<history> - показать историческую справку (доступно не для всех мест)\n\n"],
+      "*send current location* - послать текущее местоположение\n\n",
+      "_в случае ошибки разрешите в настройках доступ приложения к службам геолокации ",
+      "или воспользуйтесь стандартной отправкой геолокации_\n\n",
+      "*show map* - показать место на карте\n",
+      "*next* - показать следующее задание\n",
+      "*answer* - показать ответ к текущему заданию\n",
+      "*history* - показать историческую справку (доступно не для всех мест)"],
     "unknown": "Некорректный запрос",
     "answer_not_found": "Ответ не найден"
   }
