--- a/config.json
+++ b/config.json
@@ -23,8 +23,7 @@
       "/stop - закончить маршрут\n\n",
       "*send current location* - послать текущее местоположение\n\n",
       "_в случае ошибки разрешите в настройках доступ приложения к службам геолокации ",
-      "или воспользуйтесь стандартной отправкой геолокации:\n",
-      "Attachement (значок скрепки) -> Location_\n\n",
+      "или отправьте местоположение через аттачмент (значок скрепки)_\n\n",
       "*show map* - показать место на карте\n",
       "*next* - показать следующее задание\n",
       "*answer* - показать ответ к текущему заданию\n",
