--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
       "/stop - закончить маршрут\n\n",
       "*send current location* - послать текущее местоположение\n\n",
       "_в случае ошибки разрешите в настройках доступ приложения к службам геолокации ",
-      "или воспользуйтесь стандартной отправкой геолокации_\n\n",
+      "или отправьте местоположение через аттачмент (значок скрепки)_\n\n",
       "*show map* - показать место на карте\n",
       "*next* - показать следующее задание\n",
       "*answer* - показать ответ к текущему заданию\n",
@@ -38,5 +38,19 @@
     "history": "history",
     "show_map": "show map",
     "send_location": "send current location"
+  },
+
+  "parser": {
+    "url": "https://www.runcity.org/ru/events/archive/",
+    "min_length_addr": 5,
+    "min_length_descr": 5,
+    "min_length_quest": 3,
+    "min_length_answer": 1,
+    "stop_words_addr": ["загадка", "анаграмма"],
+    "stop_words_descr": ["внимание"],
+    "stop_words_quest": ["подпись судьи", "старт", "финиш"],
+    "remove_words_hist": ["историческая справка", "Историческая справка"]
   }
 }
+
+
