renamed buttons + fixed help and start messages + new history test

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "max_distance": 10,
   "max_next_events": 10,
-  "timeout_in_sec": 3600,
+  "timeout_in_sec": 1200,
 
   "logging": {
     "format": "%(asctime)s | %(name)s | %(message)s",
@@ -9,35 +9,38 @@
   },
 
   "messages": {
-    "start": "Чтобы начать, пришлите свое местоположение",
-    "stop": "Вы закончили, чтобы начать снова, пришлите свое местоположение",
+    "start": [
+      "Чтобы начать, пришлите свое местоположение:\n\n",
+      "- кнопка *Отправить геолокацию* ",
+      "(в случае ошибки нужно разрешить в настройках доступ приложения к службам геолокации)\n\n",
+      "- либо отправьте местоположение через аттачмент (значок скрепки)"],
+    "stop": "Бот остановлен",
     "not_found": "Не найдено ни одного места в радиусе",
     "next_not_found": [
       "Больше ничего не найдено в радиусе",
       "Пришлите новое местоположение"],
     "max_next_events": "Пришлите новое местоположение",
     "help": [
-      "Интерактивный поиск городских артефактов на основе базы данных маршрутов \"Бегущий Город\".\n\n",
-      "Выполняя небольшие задания, вы внезапно открываете для себя город с неожиданной стороны.\n\n",
-      "/start - начать маршрут\n",
-      "/stop - закончить маршрут\n\n",
-      "*send current location* - послать текущее местоположение\n\n",
-      "_в случае ошибки разрешите в настройках доступ приложения к службам геолокации ",
-      "или отправьте местоположение через аттачмент (значок скрепки)_\n\n",
-      "*show map* - показать место на карте\n",
-      "*next* - показать следующее задание\n",
-      "*answer* - показать ответ к текущему заданию\n",
-      "*history* - показать историческую справку (доступно не для всех мест)"],
-    "unknown": "Некорректный запрос",
+      "Поддерживаются следующие команды:\n",
+      "/start - запустить бота\n",
+      "/stop - остановить бота\n",
+      "/help - открыть справку\n\n",
+      "Также вы можете использовать кнопки:\n",
+      "*Отправить геолокацию* - послать текущее местоположение\n",
+      "*Показать карту* - показать место на карте\n",
+      "*Дальше* - показать следующее задание\n",
+      "*Ответ* - показать ответ к текущему заданию\n",
+      "*История* - показать историческую справку (доступно не для всех мест)"],
+    "unknown": "Некорректный запрос, возможно бот отключился, нажмите /start",
     "answer_not_found": "Ответ не найден"
   },
 
   "button_titles": {
-    "next": "next",
-    "answer": "answer",
-    "history": "history",
-    "show_map": "show map",
-    "send_location": "send current location"
+    "next": "Дальше",
+    "answer": "Ответ",
+    "history": "История",
+    "map": "Показать карту",
+    "location": "Отправить геолокацию"
   },
 
   "parser": {
