--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
   "messages": {
     "start": [
       "Чтобы начать, пришлите свое местоположение:\n\n",
-      "- кнопка *Отправить геолокацию* ",
+      "- кнопка \"Отправить геолокацию\"\n",
       "(в случае ошибки нужно разрешить в настройках доступ приложения к службам геолокации)\n\n",
       "- либо отправьте местоположение через аттачмент (значок скрепки)"],
     "stop": "Бот остановлен",
@@ -24,13 +24,7 @@
       "Поддерживаются следующие команды:\n",
       "/start - запустить бота\n",
       "/stop - остановить бота\n",
-      "/help - открыть справку\n\n",
-      "Также вы можете использовать кнопки:\n",
-      "*Отправить геолокацию* - послать текущее местоположение\n",
-      "*Показать карту* - показать место на карте\n",
-      "*Дальше* - показать следующее задание\n",
-      "*Ответ* - показать ответ к текущему заданию\n",
-      "*История* - показать историческую справку (доступно не для всех мест)"],
+      "/help - открыть справку"],
     "unknown": "Некорректный запрос, возможно бот отключился, нажмите /start",
     "answer_not_found": "Ответ не найден"
   },
