--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ before_install:
 install:
   - python setup.py develop
 script:
-  - pytest --cov=idapi --cov-report=term-missing -vv -s
+  - pytest --cov=bot --cov-report=term-missing -vv -s
 after_success:
   - codecov
